bug - workwith helptext visibility so whole productcard not clickable anymore

--- a/src/app/produkt/[id]/ProductCardWorksWith.module.scss
+++ b/src/app/produkt/[id]/ProductCardWorksWith.module.scss
@@ -28,16 +28,6 @@
     color: $a-text-action;
     background-color: white;
   }
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 1rem;
-    left: 0;
-    z-index: 1;
-  }
 }
 
 .copyButton {
